--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -37,7 +37,7 @@
     src: "../templates/nginx.j2"
     dest: "/etc/nginx/nginx.conf"
   notify:
-    - Restart nginx
+    - Reload nginx
 
 - name: Replaces logrotate entry
   template:
@@ -50,4 +50,4 @@
 #  service: name=nginx enabled=yes
   command: update-rc.d nginx defaults
   when: just_installed|changed
-
+  notify: Restart nginx
