--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,6 @@
 nginx_add_default: no
 nginx_ie8_support: yes
 nginx_keepalive_timeout: 75s
+nginx_map_hash_bucket_size: 128
 nginx_root: /var/lib/nginx/
 nginx_worker_connections: 1024
