--- a/tasks/nginx.yml
+++ b/tasks/nginx.yml
@@ -50,5 +50,5 @@
 # service module is severely broken on 14.04
 #  service: name=nginx enabled=yes
   command: update-rc.d nginx defaults
-  when: __nginx_installed|changed
+  when: __nginx_just_installed|changed
   notify: Restart nginx
