--- a/meta/main.yml
+++ b/meta/main.yml
@@ -7,13 +7,13 @@ galaxy_info:
   min_ansible_version: 1.8
 
   platforms:
-  - name: Ubuntu
-    versions:
-    - all
-  - name: Debian
-    versions:
-      - all
-  categories:
+    - name: Ubuntu
+      versions:
+        - all
+    - name: Debian
+      versions:
+        - all
+  galaxy_tags:
     - web
 
 dependencies: []
